[package]
name = "mumo-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
querystring = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serial_test = "2.0.0"
tokio = { version = "1.28.2", features = ["fs", "io-util"] }
vmap = "0.5.1"
