[package]
name = "mumo-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
futures = "0.3.28"
log = { version = "0.4.18", features = ["kv_unstable_std"] }
pico-args = { version = "0.5.0", features = ["eq-separator", "short-space-opt", "combined-flags"] }
pretty_env_logger = "0.5.0"
querystring = "1.1.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serial_test = "2.0.0"
tokio = { version = "1.28.2", features = ["fs", "io-util"] }
vmap = "0.5.1"
